source/formulaforce/main/objects/Circuit__c/Circuit__c.object-meta.xml
<CustomObject>
    <description>A Formula One Racing Circuit</description>
    <label>Circuit</label>
    <nameField>
        <label>Circuit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Circuits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>