source/formulaforce/main/objects/Circuit__c/fields/Circuit_Geo_Location__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Geo_Location__c</fullName>
    <description>Geo co-ordinates of circuit location</description>
    <label>Circuit Geo-Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>