source/formulaforce/main/objects/Circuit__c/fields/Circuit_Location__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Location__c</fullName>
    <description>Location of Circuit</description>
    <label>Circuit Location</label>
    <length>150</length>
    <type>Text</type>
</CustomField>