source/formulaforce/main/objects/Circuit__c/fields/Circuit_URL__c.field-meta.xml
<CustomField>
    <fullName>Circuit_URL__c</fullName>
    <description>Wikipedia Link for Circuit</description>
    <label>Circuit URL</label>
    <type>Url</type>
</CustomField>