source/formulaforce/main/objects/Circuit__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>The Country the Circuit is located in</description>
    <label>Country</label>
    <length>150</length>
    <type>Text</type>
</CustomField>