source/formulaforce/main/objects/Circuit__c/fields/Data_Cloud_Id__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Id__c</fullName>
    <description>Unique Identifier to sync data with Data Cloud - DO NOT ALTER</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Identifier to sync data with Data Cloud - DO NOT ALTER</inlineHelpText>
    <label>Data Cloud Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>