source/formulaforce/main/objects/Circuit__c/fields/Driver_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Driver_Nationality__c</fullName>
    <label>Driver Nationality</label>
    <length>100</length>
    <type>Text</type>
</CustomField>