source/formulaforce/main/objects/Circuit__c/fields/Driver_Reference__c.field-meta.xml
<CustomField>
    <fullName>Driver_Reference__c</fullName>
    <label>Driver Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>