source/formulaforce/main/objects/Circuit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Circuit_Location__c</columns>
    <columns>Country__c</columns>
    <columns>Data_Cloud_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>